--- a/.github/workflows/generated_pipeline.yml
+++ b/.github/workflows/generated_pipeline.yml
@@ -1,6 +1,23 @@
 
 # Transformed Infra
-I'm ready when you are. Go ahead and provide the Jenkins pipeline script. I'll convert it into a GitHub Actions workflow YAML file.
+```yml
+name: Build and Test
+on: [push]
+jobs:
+  build-and-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup Java
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+      - name: Build
+        run: ./gradlew build
+      - name: Test
+        run: ./gradlew test
+```
 
 # -- Refactoring Suggestions --
 # Keep secrets and sensitive data in environment variables or secrets manager.
