--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-GROQ_API_KEY=*********
-GITHUB_USERNAME=ramtekeaman
-GITHUB_PAT=***********
-GITHUB_REPO=Multi_Agent
+GROQ_API_KEY=***********
+
+GH_TOKEN=****************
+GH_REPO=Munasib14/Gen_AI_Multi_Agents
+GH_FILE_PATH=.github/workflows/generated_pipeline.yml
+GH_BRANCH=main
+GH_COMMIT_MSG=Add GitHub Actions workflow
+GH_WORKFLOW_NAME=LangGraph Agent
+GH_WORKFLOW_FILE=.github/workflows/generated_pipeline.yml
 
