--- a/.github/workflows/generated_pipeline.yml
+++ b/.github/workflows/generated_pipeline.yml
@@ -1,4 +1,3 @@
-
 # Transformed Infra
 ```yml
 name: Build and Test
@@ -14,14 +13,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Setup Java
         uses: actions/setup-java@v2
         with:
           java-version: '11'
-
-      - name: Build and Test
-        run: ./gradlew build test
+      - name: Build
+        run: ./gradlew build
+      - name: Test
+        run: ./gradlew test
 ```
 
 # -- Refactoring Suggestions --
