Add GitHub Actions workflow

--- a/.github/workflows/generated_pipeline.yml
+++ b/.github/workflows/generated_pipeline.yml
@@ -1,3 +1,5 @@
+# Transformed Infra
+```yml
 name: Build and Test
 
 on:
@@ -10,10 +12,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       - name: Setup Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
-          java-version: '17'
+          java-version: '11'
       - name: Build and Test
-        run: ./gradlew build test
+        run: |
+          ./gradlew build
+          ./gradlew test
+```
+
+# -- Refactoring Suggestions --
+# Keep secrets and sensitive data in environment variables or secrets manager.
+
+// -- Jenkins Pipeline Optimization Suggestions --
+// - Include a 'post' section for better visibility into pipeline success or failure.
+// - Use parameters to make the pipeline reusable for different environments or builds.
+
+# -- Deployment Strategy Recommendations --
+# CI/CD Tip: Automate your deployment process with stages like Build, Test, and Deploy. Use proper error handling and post-build actions to ensure stability.
