--- a/.github/workflows/generated_pipeline.yml
+++ b/.github/workflows/generated_pipeline.yml
@@ -1,11 +1,24 @@
-name: Build and Test
+name: Python Package
 on:
-  push:
-    branches:
-    - main
+- push
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+    - name: Install dependencies
+      run: 'python -m pip install --upgrade pip
+
+        pip install -r requirements.txt
+
+        '
+    - name: Lint
+      run: 'flake8 .
+
+        '
+    - name: Test
+      run: pytest tests/
