--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-GROQ_API_KEY=**************
+GROQ_API_KEY=************
 
-GH_TOKEN=*******************
+GH_TOKEN=***************
 GH_REPO=Munasib14/AI_AgentForge
 GH_FILE_PATH=.github/workflows/generated_pipeline.yml
 GH_BRANCH=main
