--- a/.github/workflows/generated_pipeline.yml
+++ b/.github/workflows/generated_pipeline.yml
@@ -1,4 +1,4 @@
-name: Python Package
+name: Python and Java Project
 on:
   push:
     branches:
@@ -7,19 +7,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.9'
-    - name: Install dependencies
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Install Python dependencies
       run: 'python -m pip install --upgrade pip
 
         pip install -r requirements.txt
-
-        '
-    - name: Lint
-      run: 'flake8 .
 
         '
     - name: Test
