Add GitHub Actions workflow

--- a/.github/workflows/generated_pipeline.yml
+++ b/.github/workflows/generated_pipeline.yml
@@ -1,29 +1,11 @@
-name: Terraform Automation
+name: Build and Test
 on:
   push:
     branches:
     - main
 jobs:
-  terraform:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: 1.3.5
-    - name: Terraform Init
-      run: 'terraform init
-
-        '
-    - name: Terraform Validate
-      run: 'terraform validate
-
-        '
-    - name: Terraform Plan
-      run: "if [ -n \"$(find . -name '*.tf')\" ]; then\n  terraform plan\nelse\n \
-        \ echo \"No .tf files found, skipping terraform plan\"\nfi\n"
-    - name: Terraform Apply
-      run: "if [ -n \"$(find . -name '*.tf')\" ]; then\n  terraform apply -auto-approve\n\
-        else\n  echo \"No .tf files found, skipping terraform apply\"\nfi"
